@@ -1,15 +1,16 @@
+# Maintainer: shirokuro <tod dot jackson at gmail dot com>
 # Contributor: Lex Black <autumn-wind at web dot de>
 # Contributor: bl4ckb1t <bl4ckb1t@gmail.com>
 # Contributor: Pio <xpio at tesla.rcub.bg.ac dot rs>
 
 pkgname=cboard
 pkgver=0.6.1
-pkgrel=3
-pkgdesc="CBoard is an NCurses PGN browser, editor, and front end to chess engines that use the XBoard protocol." 
+pkgrel=4
+pkgdesc="An NCurses PGN browser, editor, and front end to chess engines that use the XBoard protocol" 
 arch=('i686' 'x86_64')
 url="http://sourceforge.net/projects/c-board/"
 license=('GPL')
-depends=('ncurses' 'gnuchess')
+depends=('gnuchess')
 source=(http://downloads.sourceforge.net/project/c-board/$pkgver/$pkgname-$pkgver.tar.bz2)
 md5sums=('c987ae4089d7bc3e8a5b3d51482bb3ab')
 
