@@ -2,16 +2,15 @@
 # Contributor: Doug Newgard <scimmia22 at outlook dot com>
 
 pkgname=evasi0n
-pkgver=1.4
+pkgver=1.5
 pkgrel=1
 pkgdesc="iOS 6.x Jailbreak"
 arch=('any')
 url="http://www.evasi0n.com"
 license=('GPL')
 depends=('gtk2' 'libimobiledevice' 'libplist' 'usbmuxd' 'openssl')
-source=('https://evad3rs.box.com/shared/static/f6llokbz8k2a3ag08d54.lzma')
-sha1sums=('95c34e7a7220d2dab2e93cf9bb62beb49aef8996')
-
+source=('https://evad3rs.box.com/shared/static/0uhcxb83r30519x59avl.lzma')
+sha1sums=('923db21a9045df6aaaff27670be92330f4855a21')
 package() {
   cd "$srcdir/$pkgname-linux-$pkgver"
 
