@@ -3,17 +3,17 @@
 
 pkgname=gngeo
 pkgver=0.8
-pkgrel=4
+pkgrel=5
 pkgdesc="A command-line NeoGeo Emulator."
 url="http://gngeo.googlecode.com"
 license="custom"
 arch=('i686' 'x86_64')
 
 if [ $CARCH == i686 ]; then
-  depends=('zlib' 'sdl' 'libgl')
+  depends=('zlib' 'sdl' 'mesa-libgl')
   makedepends=('nasm')
 elif [ $CARCH == x86_64 ]; then
-  depends=('lib32-zlib' 'lib32-sdl' 'lib32-libgl')
+  depends=('lib32-zlib' 'lib32-sdl' 'lib32-mesa-libgl')
   makedepends=('nasm' 'gcc-multilib')
 fi
 
