@@ -2,7 +2,7 @@
 # Maintainer: ava1ar <mail(dot)avatar(at)gmail(dot)com>
 
 pkgname=google-talkplugin
-pkgver=3.13.2.0
+pkgver=3.14.17.0
 pkgrel=1
 pkgdesc="Video chat browser plug-in for Google Talk"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ license=('custom:google')
 depends=('gtk2>=2.12.0' 'libpng12>=1.2.13' 'libgl' 'libxt' 'lsb-release')
 optdepends=('libnotify' 'pulseaudio')
 source=(${pkgname}-$pkgver-${_arch}.rpm::http://dl.google.com/linux/direct/${pkgname}_current_${_arch}.rpm)
-sha1sums=('468f585c561595e137bb7bdb3e5b1b32a53a09e2') 
-[ "$CARCH" = 'i686' ] && sha1sums=('b9b5c61a82823a3e7bcdcc7a33ca110088c70460')
+sha1sums=('0571c15415b82728d5c511b57e8ad0d4c8e652e1') 
+[ "$CARCH" = 'i686' ] && sha1sums=('172c1eb3a28866e14a4307b80c039df0948fb978')
 
 package() {
     cp -R ${srcdir}/opt ${pkgdir}
