@@ -3,12 +3,12 @@
 _pkgbase=allegro
 pkgname=lib32-${_pkgbase}
 pkgver=5.0.8
-pkgrel=1
+pkgrel=2
 pkgdesc='Portable library mainly aimed at video game and multimedia programming (32 bit)'
 arch=('x86_64')
 url='http://alleg.sourceforge.net/'
 license=('custom')
-depends=('lib32-alsa-lib' 'lib32-libgl' 'lib32-physfs' 'lib32-gtk2' 'lib32-libpulse' "${_pkgbase}")
+depends=('lib32-alsa-lib' 'lib32-mesa-libgl' 'lib32-physfs' 'lib32-gtk2' 'lib32-libpulse' "${_pkgbase}")
 makedepends=('cmake' 'gcc-multilib' 'lib32-mesa' 'lib32-jack' 'lib32-libxxf86vm' 'lib32-libxxf86dga' 'lib32-libxpm' 'lib32-glu')
 options=('!makeflags')
 source=(http://downloads.sourceforge.net/alleg/${_pkgbase}-${pkgver}.tar.gz)
