@@ -3,13 +3,13 @@
 
 pkgname=libtiff3
 pkgver=3.9.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Legacy version of the library for manipulation of TIFF images"
 arch=('i686' 'x86_64')
 url="http://www.remotesensing.org/libtiff/"
 license=('custom')
 depends=('libjpeg' 'zlib' 'libtiff')
-makedepends=('libgl' 'freeglut' 'libxmu' 'libxi' )
+makedepends=('mesa-libgl' 'freeglut' 'libxmu' 'libxi' )
 optdepends=('freeglut: for using tiffgt')
 options=('!libtool')
 source=(ftp://ftp.remotesensing.org/pub/libtiff/tiff-${pkgver}.tar.gz)
