@@ -2,7 +2,7 @@
 
 pkgname=pcsx2-bin
 pkgver=1.0.0
-pkgrel=2
+pkgrel=3
 _pkgrev=r5325
 pkgdesc="A PlayStation 2 emulator."
 arch=('i686' 'x86_64')
@@ -11,13 +11,13 @@ license=('GPL')
 if [ $CARCH == i686 ]; then
   depends=('alsa-lib' 'bzip2' 'glew1.7' 'libjpeg-turbo'
            'nvidia-cg-toolkit' 'portaudio' 'sdl'
-           'zlib' 'wxgtk' 'libgl' 'libpng' 'libtiff'
+           'zlib' 'wxgtk' 'mesa-libgl' 'libpng' 'libtiff'
            'gtk-engines')
 elif [ $CARCH == x86_64 ]; then
   depends=('lib32-bzip2' 'lib32-glew1.7' 'lib32-libjpeg-turbo'
            'lib32-nvidia-cg-toolkit' 'lib32-portaudio'
            'lib32-sdl' 'lib32-wxgtk' 'lib32-soundtouch'
-           'lib32-libgl' 'lib32-libpng' 'lib32-libtiff'
+           'lib32-mesa-libgl' 'lib32-libpng' 'lib32-libtiff'
            'lib32-gtk-engines')
 fi
 conflicts=('pcsx2-bin' 'pcsx2-svn') # Same destination folders
