@@ -2,7 +2,7 @@
 
 pkgname=pcsx2
 pkgver=1.0.0
-pkgrel=1
+pkgrel=2
 _pkgrev=r5350
 pkgdesc="A PlayStation 2 emulator."
 arch=('i686' 'x86_64')
@@ -10,12 +10,12 @@ url="http://www.pcsx2.net"
 license=('GPL')
 if [ $CARCH == i686 ]; then
   depends=('bzip2' 'wxgtk' 'nvidia-cg-toolkit' 'glew1.7' 'portaudio'
-           'libgl' 'alsa-lib' 'libjpeg-turbo' 'soundtouch'
+           'mesa-libgl' 'alsa-lib' 'libjpeg-turbo' 'soundtouch'
            'gtk-engines' 'sdl')
   makedepends=('cmake' 'sparsehash' 'p7zip')
 elif [ $CARCH == x86_64 ]; then
   depends=('lib32-bzip2' 'lib32-wxgtk' 'lib32-nvidia-cg-toolkit'
-           'lib32-libgl' 'lib32-glew1.7' 'lib32-libjpeg-turbo'
+           'lib32-mesa-libgl' 'lib32-glew1.7' 'lib32-libjpeg-turbo'
            'lib32-portaudio' 'lib32-alsa-lib' 'lib32-soundtouch'
            'lib32-gtk-engines' 'lib32-sdl')
   makedepends=('cmake' 'sparsehash' 'gcc-multilib' 'p7zip')
