@@ -10,7 +10,7 @@ license=('LGPL3')
 depends=('elementary-svn' 'python2')
 makedepends=('subversion' 'cython2')
 provides=('python2-ecore' 'python2-edje' 'python2-elementary' 'python2-emotion'
-          'python2-ethumb' 'python2-evas')
+          'python2-evas')
 
 _svntrunk="http://svn.enlightenment.org/svn/e/trunk/BINDINGS/python/python-efl/"
 _svnmod="python-efl"
