@@ -1,0 +1,10 @@
+post_install() {
+cat << EOM
+
+        ==>
+        ==> Official builds using the Intel compiler are likely to be stronger.
+        ==>
+
+EOM
+}
+
