@@ -2,7 +2,7 @@
 
 pkgname=supermenu
 pkgver=8.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A dynamic and extendible menu-driven program launcher, using dmenu"
 arch=('any')
 url="http://appstogo.mcfadzean.org.uk/linux.html#supermenu"
@@ -11,7 +11,7 @@ depends=('dmenu')
 optdepends=('gksu' 'gxmessage' 'wine')
 backup=('etc/supermenu.conf')
 source=("http://appstogo.mcfadzean.org.uk/dl/$pkgname/$pkgname-$pkgver.tar.gz")
-md5sums=('001af2c4d725747ae3aec4800c98cc25')
+md5sums=('a9256aa5fbc3f4fb3c051cf2f1bebd6c')
 
 package() {
   cd "$srcdir/$pkgname-$pkgver"
