@@ -1,6 +1,14 @@
+2013-02-26 josephgbr <rafael.f.f1@gmail.com>
+
+        * 5576-1 :
+        Updated to latest upstream revision
+
+        * depends
+        libgl changed to mesa-libgl
+
 2012-08-20 josephgbr <rafael.f.f1@gmail.com>
 
-    * 5388-1 :
+        * 5388-1 :
 	Updated to latest upstream revision (note: after stable version 1.0.0)
 	
 	* options :
@@ -14,7 +22,7 @@
 	
 2012-05-07 josephgbr <rafael.f.f1@gmail.com>
 
-    * 5201-1 :
+        * 5201-1 :
 	Updated to latest upstream revision
 	
 	* build() :
@@ -22,7 +30,7 @@
 	
 2012-04-23 josephgbr <rafael.f.f1@gmail.com>
 
-    * 5187-1 :
+        * 5187-1 :
 	Updated to latest upstream revision
 	
 	* build() :
